# Instance-Manager

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  InstanceManager.sln  README.md  premake5.lua
Instance-Manager/: imgui.ini  premake5.lua
Instance-Manager/src/: AppLog.hpp  Management.hpp  ThreadManager.hpp  WalnutApp.cpp  config.hpp  functions.cpp  functions.h  md5.h  mousecontroller.hpp  ntdll.h  request.hpp  stb_image_write.h
InstanceManager/: AppLog.cpp  AppLog.h  AppLog.hpp  AutoRelaunch.cpp  AutoRelaunch.h  AutoRelaunch.hpp  Base.hpp  CMakeLists.txt  Config.cpp  Config.h  Config.hpp  FS.cpp  FileManagement.cpp  FileManagement.h  FileManagement.hpp  Functions.cpp  Functions.cpp~RF1cfce02.TMP  Functions.h  Group.cpp  Group.h  InstanceControl.cpp  InstanceControl.h  InstanceManager.cpp  InstanceManager.vcxproj  InstanceManager.vcxproj.filters  Manager.cpp  Manager.h  MouseController.hpp  Native.cpp  Native.h  Roblox.cpp  Roblox.h  StringUtils.cpp  ThreadManager.hpp  UI.cpp  UI.h  Utils.cpp  imgui.ini  imgui_demo.cpp  imgui_draw.cpp  (+6 more)
InstanceManager/include/config/: Config.hpp
InstanceManager/include/filesystem utils/: FS.h
InstanceManager/include/group/: Group.h
InstanceManager/include/instance-control/: InstanceControl.h
InstanceManager/include/logger/: FileLogger.h  Logger.h
InstanceManager/include/logging/: CoreLogger.hpp  FileLogger.h  FileLogger.hpp
InstanceManager/include/manager/: Manager.h
InstanceManager/include/mouse controller/: MouseController.hpp
InstanceManager/include/mouse-controller/: MouseController.hpp
InstanceManager/include/native/: Native.h  ntdll.h
InstanceManager/include/queued thread pool/: QueuedThreadPool.hpp
InstanceManager/include/roblox/: Roblox.h
InstanceManager/include/thread pool/: ThreadPool.hpp
InstanceManager/include/ui/: AppLog.h  AppLog.hpp  AutoRelaunch.h  Base.hpp  CustomWidgets.hpp  FileManagement.h  InstanceManager.h  UI.h
InstanceManager/include/utils/: Utils.h  Utils.hpp
InstanceManager/include/utils/filesystem/: FS.h
InstanceManager/include/utils/string/: StringUtils.h
InstanceManager/include/utils/threadpool/: QueuedThreadPool.hpp  ThreadPool.hpp
InstanceManager/libs/imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_stdlib.h
InstanceManager/src/config/: Config.cpp
InstanceManager/src/filesystem utils/: FS.cpp
InstanceManager/src/group/: Group.cpp
InstanceManager/src/instance control/: InstanceControl.cpp
InstanceManager/src/instance-control/: InstanceControl.cpp
InstanceManager/src/manager/: Manager.cpp
InstanceManager/src/native/: Native.cpp
InstanceManager/src/roblox/: Roblox.cpp
InstanceManager/src/ui/: AppLog.cpp  AutoRelaunch.cpp  FileManagement.cpp  InstanceManager.cpp  UI.cpp
InstanceManager/src/utils/: Utils.cpp
InstanceManager/src/utils/filesystem/: FS.cpp
InstanceManager/src/utils/string/: StringUtils.cpp
InstanceManager/src/utils/threadpool/: threadpool.cpp
Template/: AppxBlockMap.xml  AppxManifest.xml  RobloxCommandSet.xml  [Content_Types].xml  resources.pri
Template/AppxMetadata/: CodeIntegrity.cat
Template/ExtraContent/LuaPackages/: rotriever.toml
Template/ExtraContent/animations/: bodybuilderEmote.rbxm  bodybuilderKeyframeSequence.rbxm  dynamicHeadMoodAnimation.rbxm  fallbackKeyframeSequence.rbxm  geckoMoodAnimation.rbxm  ninjaIdleAnimation.rbxm  pirateIdleAnimation.rbxm
Template/ExtraContent/places/: Maquettes.rbxl  Mobile.rbxl  VRFTUX.rbxl
Template/ExtraContent/translations/: CoreScriptLocalization.csv
Template/PlatformContent/pc/terrain/: materials.json  materials2022.json
Template/content/avatar/: characterCagedHSRV17-fixed-WrapTargets.rbxm  characterCagedHSRV18.rbxm  characterR15.rbxm  defaultDynamicHeadV2.rbxm
Template/content/avatar/animations/: humanoidR15AnimateChildren.rbxm
Template/content/avatar/scripts/: CharacterStateMachine-0.1.3.rbxm  CharacterStateMachine-0.1.4.rbxm  humanoidAnimatePlayEmote.rbxm  humanoidAnimateR15Moods.rbxm
Template/content/avatar/unification/: AdapterReference.rbxm  CollisionHead.rbxm  PhysicsReference.rbxm  R15.rbxm  humanoidClassicAnimateDefaultChildren.rbxm
Template/content/configs/DataModelPatchConfig/: DataModelPatchConfig.json
Template/content/fonts/families/: AccanthisADFStd.json  AmaticSC.json  Arial.json  Balthazar.json  (+35 more)
Template/content/localization/: numberFormats.json
Template/shaders/: shaders_d3d10.pack  shaders_d3d10_1.pack  shaders_glsl.pack  shaders_glsl3.pack
scripts/: Setup.bat
x84-injector/: x84-injector.vcxproj  x84-injector.vcxproj.filters
x86-injector/: CLI11.hpp  CMakeLists.txt  main.cpp
(+11 files in other folders)
